<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/ic_logo_blue" />

        <EditText
            android:id="@+id/li_edt_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/li_edt_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/li_btn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/log_in"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/li_txt_register"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>