<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context="com.example.saka.myapplication.RegisterActivity">

        <EditText
            android:id="@+id/su_edt_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/su_edt_mail"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/su_edt_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/su_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/su_txt_login"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>